# employment-sponsor-data-enrichment

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATIONS.md  README.md  pyproject.toml  pyrightconfig.json
.agent/: companies-house-public.swagger.json
.agent/directives/: AGENT.md  project.md  python3.practice.md  rules.md
.agent/plans/: README.md  action-plan.md  deferred-features.md  file-only-di-onboarding-improvement.plan.md  future_enhancements.md  implementation_plan.md  ingest-source-expansion.plan.md  linear-delivery-plan.md  overview-cache-first-and-file-first.md  plan-serious-issue-2026-02-02.md  plan.md  planned-features.md  refactor-plan.md  review-findings-2026-02-02.md  sector-profiles.plan.md  validation-protocol-implementation.plan.md
.agent/plans/archive/: file-only-di-onboarding-improvement.plan.md  high-level.plan.md  ingest-source-expansion.plan.md  issues.md  overview-cache-first-and-file-first.md  refactor-plan.md  sector-profiles.plan.md  tooling-update.plan.md  (+3 more)
.agent/project-overview/: project.md
.agent/reports/: standalone_review_2026_02_02.md
.agent/research/: ch-bulk-data-guidance.md  ch-data-product-fields.md  ch-sic-codes.md
.github/workflows/: ci.yml  spelling.yml
data/processed/: companies_explain.csv  companies_shortlist.csv  sponsor_enrich_checkpoint.csv  sponsor_enrich_resume_report.json  sponsor_unmatched.csv
data/reference/: location_aliases.json  scoring_profiles.json
docs/: archived-api-runtime-mode.md  companies-house-file-source.md  data-contracts.md  operational-discoveries.md  performance-improvement-plan.md  refresh-and-run-all-diagrams.md  snapshots.md  troubleshooting.md  validation-protocol.md  validation-run-evidence.md
docs/architectural-decision-records/: README.md  adr0001-record-architecture-decisions.md  adr0002-python-3-11-and-uv-tooling.md  adr0002-python-3-13-and-uv-tooling.md  adr0002-python-3-14-and-uv-tooling.md  adr0003-csv-artefact-pipeline.md  adr0003-stage-based-csv-pipeline.md  adr0004-config-loaded-at-cli-and-passed-through.md  adr0005-dependency-injection-for-io-and-http.md  adr0006-network-isolated-test-strategy.md  adr0007-companies-house-api-client-guardrails.md  adr0008-stage2-batching-resume-and-reporting.md  adr0008-transform-enrich-batching-resume-and-reporting.md  adr0009-stage2-matching-and-audit-trail.md  adr0009-transform-enrich-matching-and-audit-trail.md  adr0010-stage3-tech-likelihood-scoring.md  adr0010-transform-score-tech-likelihood-scoring.md  adr0011-no-dashboard-plugins-or-sqlite.md  adr0012-artefact-boundaries-and-orchestration.md  adr0012-stages-as-artefact-boundaries.md  adr0013-strict-internal-typing.md  adr0014-io-boundaries-consolidation.md  adr0015-observability-logging.md  adr0016-configurable-companies-house-source.md  adr0017-usage-shortlist-separation.md  adr0018-linting-rules-architectural-boundaries-and-fail-fast.md  adr0019-cache-first-refresh-and-bulk-companies-house-snapshots.md  adr0020-file-first-companies-house-lookup.md  adr0021-refresh-step-groups-and-staged-acquire-clean.md  adr0022-file-only-runtime-io-boundaries-and-single-region-filtering.md  adr0023-file-mode-enrichment-throughput-strategy.md
docs/requirements/: README.md  m2-file-first-throughput.md  m7-value-focused-shortlists.md
docs/user-stories/: README.md  us-m2-file-first-throughput.md  us-m7-value-focused-shortlists.md
reports/: stage-usage.txt
scripts/: check_inline_ignores.py  check_us_spelling.py  install-uv  quality-gates.sh  validation_audit_enrichment.py  validation_check_outputs.py  validation_check_snapshots.py  validation_e2e_fixture.py
src/uk_sponsor_pipeline/: __init__.py  cli.py  cli_progress.py  composition.py  config.py  config_file.py  devtools.py  exceptions.py  infrastructure.py  io_contracts.py  io_validation.py  normalization.py  protocols.py  schemas.py  types.py
src/uk_sponsor_tech_hiring_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stubs/breame/: __init__.pyi
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_devtools.py  test_domain_companies_house.py  test_domain_sponsor_register.py  test_download.py  test_infrastructure.py  test_integration.py  test_network_blocking.py  test_normalization.py  test_observability_logging.py  test_protocols_resilience.py  test_stage1.py  test_stage2.py  test_stage3.py
tests/application/: test_companies_house_clean.py  test_companies_house_index.py  test_companies_house_source.py  test_download.py  test_pipeline.py  test_refresh_companies_house.py  test_refresh_sponsor.py  test_scoring_profiles.py  test_snapshots.py  test_source_links.py  test_stage1.py  test_stage2_companies_house.py  test_stage3_scoring.py  test_transform_enrich.py  test_transform_register.py  test_transform_score.py  test_usage_shortlist.py
tests/characterisation/: README.md  test_stage1_characterisation.py  test_stage2_characterisation.py  test_stage3_characterisation.py  test_transform_enrich_characterisation.py  test_transform_register_characterisation.py  test_transform_score_characterisation.py
tests/cli/: test_cli.py
tests/composition/: test_composition.py
tests/config/: test_config.py  test_config_file.py  test_config_precedence.py
tests/devtools/: test_devtools.py  test_enrichment_audit.py  test_validation_e2e_determinism.py  test_validation_outputs.py  test_validation_snapshots.py
tests/domain/: test_companies_house.py  test_location_profiles.py  test_organisation_identity.py  test_scoring.py  test_sponsor_register.py
tests/fakes/: __init__.py  cache.py  filesystem.py  http.py  progress.py  resilience.py  test_filesystem.py
tests/infrastructure/: test_cache.py  test_filesystem.py  test_http.py  test_resilience.py
tests/integration/: test_integration.py
tests/network/: test_blocking.py
tests/observability/: test_logging.py
tests/scripts/: test_us_spelling_check.py  test_validation_scripts.py
tests/support/: enrichment_audit_fixtures.py  errors.py  scoring_profiles.py  stage2_rows.py  transform_enrich_rows.py  transform_score_rows.py
(+61 files in other folders)
