[project]
name = "uk-sponsor-tech-hiring-pipeline"
version = "0.1.0"
description = "Pipeline to download UK licensed sponsor register, clean/filter, enrich with Companies House, and produce tech-hiring shortlists."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.3",
  "pandas-stubs>=2.2",
  "types-requests>=2.31",
  "types-beautifulsoup4>=4.12",
  "types-tqdm>=4.66",
]

[project.scripts]
uk-sponsor = "uk_sponsor_pipeline.cli:app"
lint = "uk_sponsor_pipeline.devtools:lint"
format = "uk_sponsor_pipeline.devtools:format_code"
format-check = "uk_sponsor_pipeline.devtools:format_check"
typecheck = "uk_sponsor_pipeline.devtools:typecheck"
test = "uk_sponsor_pipeline.devtools:test"
coverage = "uk_sponsor_pipeline.devtools:coverage"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# If you use uv: `uv sync` will install deps from this file.
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
