[project]
name = "uk-sponsor-tech-hiring-pipeline"
version = "0.1.0"
description = "Pipeline to download UK licensed sponsor register, clean/filter, enrich with Companies House, and produce tech-hiring shortlists."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pandas>=3.0.0",
  "requests>=2.32.5",
  "beautifulsoup4>=4.14.3",
  "lxml>=6.0.2",
  "pydantic>=2.12.5",
  "typer>=0.21.1",
  "rich>=14.3.1",
  "python-dotenv>=1.2.1",
  "tqdm>=4.67.2",
]

[project.scripts]
uk-sponsor = "uk_sponsor_pipeline.composition:app"
lint = "uk_sponsor_pipeline.devtools:lint"
format = "uk_sponsor_pipeline.devtools:format_code"
format-check = "uk_sponsor_pipeline.devtools:format_check"
typecheck = "uk_sponsor_pipeline.devtools:typecheck"
spelling-check = "uk_sponsor_pipeline.devtools:spelling_check"
test = "uk_sponsor_pipeline.devtools:test"
coverage = "uk_sponsor_pipeline.devtools:coverage"
check = "uk_sponsor_pipeline.devtools:check"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
# If you use uv: `uv sync` will install deps from this file.
package = true

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pyright>=1.1.408",
  "ruff>=0.14.14",
  "breame>=0.1.2",
  "import-linter>=2.9",
  "pre-commit>=4.5.1",
  "pandas-stubs>=2.3.3.260113",
  "types-requests>=2.32.4.20260107",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-tqdm>=4.67.0.20250809",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uk_sponsor_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
extend-select = ["PGH003", "PGH004", "RUF100", "RUF101", "TRY", "BLE", "SLF001", "T20", "DTZ"]
# If you use ruff-format, E501 is typically redundant;

[tool.ruff.format]
quote-style = "double"

[tool.us_spelling]
include_extensions = [".md", ".py", ".toml", ".txt", ".yaml", ".yml"]
exclude_dirs = [
  ".git",
  ".agent/research",
  ".agent/reference",
  ".import_linter_cache",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "data",
  "dist",
  "reports",
]
exclude_files = [".coverage", "uv.lock"]
include_list = true

[tool.ruff.lint.mccabe]
max-complexity = 45

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 45
max-returns = 8
max-statements = 220

[tool.importlinter]
root_package = "uk_sponsor_pipeline"

[[tool.importlinter.contracts]]
name = "Domain must not import infrastructure"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.domain"]
forbidden_modules = ["uk_sponsor_pipeline.infrastructure"]

[[tool.importlinter.contracts]]
name = "Domain must not import application"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.domain"]
forbidden_modules = ["uk_sponsor_pipeline.application"]

[[tool.importlinter.contracts]]
name = "Domain must not import CLI"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.domain"]
forbidden_modules = ["uk_sponsor_pipeline.cli"]

[[tool.importlinter.contracts]]
name = "Application must not import infrastructure"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.application"]
forbidden_modules = ["uk_sponsor_pipeline.infrastructure"]

[[tool.importlinter.contracts]]
name = "CLI must not import infrastructure"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.cli"]
forbidden_modules = ["uk_sponsor_pipeline.infrastructure"]

[[tool.importlinter.contracts]]
name = "Infrastructure must not import domain or types"
type = "forbidden"
source_modules = ["uk_sponsor_pipeline.infrastructure"]
forbidden_modules = ["uk_sponsor_pipeline.domain", "uk_sponsor_pipeline.types"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
